--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "request-promise-native": "^1.0.9"
+  },
   "devDependencies": {
     "@types/node": "^16.10.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -36,7 +38,6 @@
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4",
-    "request-promise-native": "^1.0.9"
+    "typescript": "^4.4.4"
   }
 }
